<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_LongString" Id="{d57fe306-93a2-4aa3-9c36-026c7f90ffdc}">
    <Declaration><![CDATA[TYPE T_LongString : STRING(Param_Configurations.LongStringSize); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>