<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Size" Id="{508f0ae2-5b4a-486c-ab95-fe675831fe26}">
    <Declaration><![CDATA[TYPE T_Size : DINT; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>