<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="FB_ReadOnlyStringBuilderAdapter" Id="{5b2f76d6-71b2-41fd-9735-b5916830d938}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ReadOnlyStringBuilderAdapter IMPLEMENTS I_ReadOnlyStringBuilderAdapter, I_Enumerable
VAR_INPUT
	ipStringBuilder : I_StringBuilder;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="Capacity" Id="{5e804c55-c620-4d22-a532-fbaedf7e33f3}">
      <Declaration><![CDATA[(* Number of bytes allocated in memory for the string builder's contents.*)
PROPERTY Capacity : T_Size
]]></Declaration>
      <Get Name="Get" Id="{a02353a6-8f43-4024-b756-1b601822b353}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
Capacity := THIS^.ipStringBuilder.Capacity;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="CopySubstringTo" Id="{e52e47a2-b7cb-4fc2-937d-d79a7dd6f1c1}">
      <Declaration><![CDATA[(* Copies a subset of characters in the string builder from specified position at specified length to a string*)
METHOD CopySubstringTo : I_ReadOnlyStringBuilderAdapter
VAR_INPUT
	Position, Length : T_Size;
	Value : ANY;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CopySubstringTo := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.CopySubstringTo(Position, Length, Value);]]></ST>
      </Implementation>
    </Method>
    <Method Name="CopyTo" Id="{cd0ca31a-3a35-4a56-9e9a-84c2c0a452e5}">
      <Declaration><![CDATA[(* Copies contents of string builder to given string of any size*)
METHOD CopyTo : I_ReadOnlyStringBuilderAdapter
VAR_INPUT
	Value : ANY;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CopyTo := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.CopyTo(Value);]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetBuffer" Id="{0e58de1f-9791-406a-84d4-e5bae5496810}">
      <Declaration><![CDATA[(* !!!UNSAFE!!! DON'T FORGET TO RELEASE/DELETE FROM	MEMORY WHEN DONE!
 | Get a copy of the internal string buffer at the size of the string length + 1.*)
METHOD GetBuffer : I_ReadOnlyStringBuilderAdapter
VAR_IN_OUT
	pBuffer	: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetBuffer := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.GetBuffer(pBuffer);]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetCapacity" Id="{e0b2a79e-d112-46c1-a77e-9c5f7b9fc05b}">
      <Declaration><![CDATA[(* Retrieves the number of bytes allocated in memory for the string builder's contents.*)
METHOD GetCapacity : I_ReadOnlyStringBuilderAdapter
VAR_OUTPUT
	Capacity	: T_Size;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetCapacity := THIS^;
Capacity := THIS^.Capacity;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetChar" Id="{1af0a8ac-26b2-40b7-8c19-3ef6ce240260}">
      <Declaration><![CDATA[(* Gets character at specified position in the string builder*)
METHOD GetChar : T_Char
VAR_INPUT
	Position	: T_Size;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
GetChar := THIS^.ipStringBuilder.GetChar(Position);]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetEnumerator" Id="{55b67b81-ce26-456d-b5b2-4ac663be4f03}">
      <Declaration><![CDATA[METHOD GetEnumerator : I_Enumerator
VAR_INST
	fbEnumerator : FB_StringBuilderEnumerator(THIS^.ipStringBuilder);
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbEnumerator.FB_init(0,0,THIS^.ipStringBuilder);
GetEnumerator := fbEnumerator;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetLength" Id="{84f2c33b-4773-4941-aceb-9877e5a12da1}">
      <Declaration><![CDATA[(* Retrieves the current size of string builder contents*)
METHOD GetLength : I_ReadOnlyStringBuilderAdapter
VAR_OUTPUT
	Length	: T_Size;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetLength := THIS^;
Length := THIS^.Length;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetString" Id="{65690ebe-27e3-45fa-ab0e-48130b75ef40}">
      <Declaration><![CDATA[(* Converts contents of string builder to string and returns them*)
METHOD GetString : T_LongString
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
GetString := THIS^.ipStringBuilder.GetString();]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetSubstring" Id="{9fa3ecbe-5e9c-4351-b490-0efbc9d44201}">
      <Declaration><![CDATA[(* Get a subset of characters in the string builder from specified position at specified length and returns them as a string*)
METHOD GetSubstring : T_LongString
VAR_INPUT
	Position	: T_Size;
	Length	: T_Size;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
GetSubstring := THIS^.ipStringBuilder.GetSubstring(Position, Length);]]></ST>
      </Implementation>
    </Method>
    <Property Name="Length" Id="{47428ebe-0553-4546-9fa2-3c3da99dd0e5}">
      <Declaration><![CDATA[(* Current size of string builder contents*)
PROPERTY Length : T_Size
]]></Declaration>
      <Get Name="Get" Id="{f03399eb-acc0-45e6-b564-02633cd162e1}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
Length := THIS^.ipStringBuilder.Length;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Search" Id="{cad7533e-4311-4c28-a285-5b01561ebfe0}">
      <Declaration><![CDATA[(* Finds the position of the first instance of a given string in the content's of the string builder from a starting position*)
METHOD Search : I_ReadOnlyStringBuilderAdapter
VAR_INPUT
	sValue	: T_LongString;
	Start_Position	: T_Size;
END_VAR
VAR_OUTPUT
	Position	: T_Size;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Search := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.Search(sValue, Start_Position, Position => Position);]]></ST>
      </Implementation>
    </Method>
    <Method Name="SearchAny" Id="{67b278b9-ea26-4100-9ab4-f6713e4518df}">
      <Declaration><![CDATA[(* Finds the position of the first instance of a given value in the content's of the string builder from a starting position*)
METHOD SearchAny : I_ReadOnlyStringBuilderAdapter
VAR_INPUT
	Value : ANY;
	Start_Position : T_Size;
END_VAR
VAR_OUTPUT
	Position : T_Size := -1;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SearchAny := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.SearchAny(Value, Start_Position, Position => Position);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Split" Id="{90821461-a891-4b50-8400-5b7b505302ad}">
      <Declaration><![CDATA[(* Appends selected characters from the current string builder to the selected string builder*)
METHOD Split : I_ReadOnlyStringBuilderAdapter
VAR_INPUT
	Position, Length : T_Size;
	ipStringBuilder : I_StringBuilder;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Split := THIS^;
IF THIS^.ipStringBuilder = 0 THEN RETURN; END_IF
THIS^.ipStringBuilder.Split(Position, Length, ipStringBuilder);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.Capacity.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.CopySubstringTo">
      <LineId Id="28" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="29" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.CopyTo">
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetBuffer">
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetCapacity">
      <LineId Id="9" Count="1" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetChar">
      <LineId Id="8" Count="1" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetEnumerator">
      <LineId Id="10" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetLength">
      <LineId Id="8" Count="1" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetString">
      <LineId Id="5" Count="1" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.GetSubstring">
      <LineId Id="9" Count="1" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.Length.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.Search">
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.SearchAny">
      <LineId Id="30" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="31" Count="0" />
    </LineIds>
    <LineIds Name="FB_ReadOnlyStringBuilderAdapter.Split">
      <LineId Id="27" Count="1" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>